change font style

--- a/index.html
+++ b/index.html
@@ -523,8 +523,10 @@
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
-        text-align: center;">
-    Phương Yêu Bé Su
+        text-align: center;
+        font-style: italic;"
+        >
+    Phương yêu Bé Su
   </div>
 
 </BODY>
